--- a/Outlook/SendProcessNotificationAndStatus.xaml
+++ b/Outlook/SendProcessNotificationAndStatus.xaml
@@ -10,7 +10,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1150,1532</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1153.33333333333,1397.33333333333</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>SendProcessNotificationAndStatus_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -82,7 +82,7 @@
       <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="This .xaml file Sends process end notification and status report to the required recipients" DisplayName="SendProcessNotificationAndStatus" sap:VirtualizedContainerService.HintSize="606.666666666667,1467.33333333333" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="This .xaml file Sends process end notification and status report to the required recipients" DisplayName="SendProcessNotificationAndStatus" sap:VirtualizedContainerService.HintSize="606.666666666667,1332.66666666667" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -90,7 +90,6 @@
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:LogMessage DisplayName="Log Message: Send status report flow started" sap:VirtualizedContainerService.HintSize="564.666666666667,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="Info" Message="[&quot;Send status report flow - Started&quot;]" />
-    <ui:LogMessage DisplayName="Log Message: Sending process end notification" sap:VirtualizedContainerService.HintSize="564.666666666667,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Sending process end notification&quot;]" />
     <TryCatch sap2010:Annotation.AnnotationText="Try catch added for sending process end notifiation and status " DisplayName="Try Catch: Send process end notification and status " sap:VirtualizedContainerService.HintSize="564.666666666667,806" sap2010:WorkflowViewState.IdRef="TryCatch_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -158,6 +157,6 @@
       </TryCatch.Catches>
     </TryCatch>
     <ui:LogMessage DisplayName="Log Message: Process End notification sent" sap:VirtualizedContainerService.HintSize="564.666666666667,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="Info" Message="[&quot;Process end notification sent with status report&quot;]" />
-    <ui:LogMessage DisplayName="Log Message: Send status report flow - Ended" sap:VirtualizedContainerService.HintSize="334,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="Info" Message="[&quot;Send status report flow - Ended&quot;]" />
+    <ui:LogMessage DisplayName="Log Message: Send status report flow - Ended" sap:VirtualizedContainerService.HintSize="564.666666666667,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="Info" Message="[&quot;Send status report flow - Ended&quot;]" />
   </Sequence>
 </Activity>
