--- a/TSIPortal/EnterDetailsOnTsiDownloadFile.xaml
+++ b/TSIPortal/EnterDetailsOnTsiDownloadFile.xaml
@@ -10,7 +10,7 @@
     <x:Property Name="in_FlatFilePath" Type="InArgument(x:String)" />
     <x:Property Name="out_FilePath" Type="OutArgument(x:String)" />
   </x:Members>
-  <sap:VirtualizedContainerService.HintSize>1153.33333333333,2620</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1153.33333333333,2486</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="24">
@@ -70,9 +70,10 @@
       <AssemblyReference>UiPath.UIAutomationNext</AssemblyReference>
       <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
       <AssemblyReference>System.ServiceModel.Activities</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Downloads flat files with item details and without item details" DisplayName="Download flat files" sap:VirtualizedContainerService.HintSize="756,2555.33333333333" sap2010:WorkflowViewState.IdRef="Sequence_6">
+  <Sequence sap2010:Annotation.AnnotationText="Downloads flat files with item details and without item details" DisplayName="Download flat files" sap:VirtualizedContainerService.HintSize="376,2421.33333333333" sap2010:WorkflowViewState.IdRef="Sequence_6">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="glFromDate" />
       <Variable x:TypeArguments="x:String" Name="glToDate" />
@@ -84,9 +85,9 @@
         <x:Boolean x:Key="IsPinned">False</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:LogMessage DisplayName="Log Message: Enter details on TSI flow - Started" sap:VirtualizedContainerService.HintSize="714,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_7" Level="Info" Message="[&quot;Enter details on TSI portal to download file flow - Started&quot;]" />
-    <ui:LogMessage DisplayName="Log Message: Navigated to Invoice details report page" sap:VirtualizedContainerService.HintSize="714,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Naviagted to Invoice details report page&quot;]" />
-    <ui:Click AlterIfDisabled="{x:Null}" SendWindowMessages="{x:Null}" ClickType="CLICK_SINGLE" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Click: GL Date checkbox" sap:VirtualizedContainerService.HintSize="714,106" sap2010:WorkflowViewState.IdRef="Click_1" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
+    <ui:LogMessage DisplayName="Log Message: Enter details on TSI flow - Started" sap:VirtualizedContainerService.HintSize="334,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_7" Level="Info" Message="[&quot;Enter details on TSI portal to download file flow - Started&quot;]" />
+    <ui:LogMessage DisplayName="Log Message: Navigated to Invoice details report page" sap:VirtualizedContainerService.HintSize="334,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Navigated to Invoice details report page&quot;]" />
+    <ui:Click AlterIfDisabled="{x:Null}" SendWindowMessages="{x:Null}" ClickType="CLICK_SINGLE" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Click: GL Date checkbox" sap:VirtualizedContainerService.HintSize="334,106" sap2010:WorkflowViewState.IdRef="Click_1" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
       <ui:Click.CursorPosition>
         <ui:CursorPosition Position="Center">
           <ui:CursorPosition.OffsetX>
@@ -101,39 +102,39 @@
         <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="6e69f626-fa49-43f0-8bd8-a646b144f885" InformativeScreenshot="b0217af5ece79906ad6a8ea7821f43aa" Selector="&lt;html app='chrome.exe' title='*VIS*' /&gt;&lt;webctrl type='checkbox' name='chkGLDate' /&gt;" TimeoutMS="[in_Timeout]" WaitForReady="COMPLETE" />
       </ui:Click.Target>
     </ui:Click>
-    <Assign DisplayName="Assign: GL From date" sap:VirtualizedContainerService.HintSize="714,62" sap2010:WorkflowViewState.IdRef="Assign_1">
+    <Assign DisplayName="Assign: GL From date" sap:VirtualizedContainerService.HintSize="334,62" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">[glFromDate]</OutArgument>
       </Assign.To>
       <Assign.Value>
-        <InArgument x:TypeArguments="x:String">[DateTime.Now.AddDays(-in_GlFromDateValue).ToString("dd-MMM-yyyy")]</InArgument>
+        <InArgument x:TypeArguments="x:String">[DateTime.Now.AddDays(-in_GlFromDateValue).ToString(in_Config("DateTimeFormat_GLFromDate").ToString)]</InArgument>
       </Assign.Value>
     </Assign>
-    <Assign DisplayName="Assign: GL To Date" sap:VirtualizedContainerService.HintSize="714,62" sap2010:WorkflowViewState.IdRef="Assign_2">
+    <Assign DisplayName="Assign: GL To Date" sap:VirtualizedContainerService.HintSize="334,62" sap2010:WorkflowViewState.IdRef="Assign_2">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">[glToDate]</OutArgument>
       </Assign.To>
       <Assign.Value>
-        <InArgument x:TypeArguments="x:String">[DateTime.Now.AddDays(-in_GlToDateValue).ToString("dd-MMM-yyyy")]</InArgument>
+        <InArgument x:TypeArguments="x:String">[DateTime.Now.AddDays(-in_GlToDateValue).ToString(in_Config("DateTimeFormat_GLToDate").ToString)]</InArgument>
       </Assign.Value>
     </Assign>
-    <ui:TypeInto ClickBeforeTyping="{x:Null}" DelayBetweenKeys="{x:Null}" SendWindowMessages="{x:Null}" Activate="True" AlterIfDisabled="True" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Type Into: GL From date" EmptyField="True" sap:VirtualizedContainerService.HintSize="714,134" sap2010:WorkflowViewState.IdRef="TypeInto_1" SimulateType="True" Text="[glFromDate]">
+    <ui:TypeInto ClickBeforeTyping="{x:Null}" DelayBetweenKeys="{x:Null}" SendWindowMessages="{x:Null}" Activate="True" AlterIfDisabled="True" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Type Into: GL From date" EmptyField="True" sap:VirtualizedContainerService.HintSize="334,134" sap2010:WorkflowViewState.IdRef="TypeInto_1" SimulateType="True" Text="[glFromDate]">
       <ui:TypeInto.Target>
         <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="24668af3-8429-44ac-9dc7-0351d09fecc1" InformativeScreenshot="109bd5003128d014542634a5f62b6623" Selector="&lt;html app='chrome.exe' title='*VIS*' /&gt;&lt;webctrl tag='INPUT' name='txtFromDate' /&gt;" TimeoutMS="[in_Timeout]" WaitForReady="COMPLETE" />
       </ui:TypeInto.Target>
     </ui:TypeInto>
-    <ui:LogMessage DisplayName="Log Message: GL From date" sap:VirtualizedContainerService.HintSize="714,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="Info" Message="[&quot;GL From Date: &quot;+glFromDate+&quot; entered&quot;]" />
-    <ui:TypeInto ClickBeforeTyping="{x:Null}" DelayBetweenKeys="{x:Null}" SendWindowMessages="{x:Null}" Activate="True" AlterIfDisabled="True" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Type Into: GL To date" EmptyField="True" sap:VirtualizedContainerService.HintSize="714,134" sap2010:WorkflowViewState.IdRef="TypeInto_2" SimulateType="True" Text="[glToDate]">
+    <ui:LogMessage DisplayName="Log Message: GL From date" sap:VirtualizedContainerService.HintSize="334,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="Info" Message="[&quot;GL From Date: &quot;+glFromDate+&quot; entered&quot;]" />
+    <ui:TypeInto ClickBeforeTyping="{x:Null}" DelayBetweenKeys="{x:Null}" SendWindowMessages="{x:Null}" Activate="True" AlterIfDisabled="True" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Type Into: GL To date" EmptyField="True" sap:VirtualizedContainerService.HintSize="334,134" sap2010:WorkflowViewState.IdRef="TypeInto_2" SimulateType="True" Text="[glToDate]">
       <ui:TypeInto.Target>
         <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="547c4b5b-8783-4272-9ded-52889157ce64" InformativeScreenshot="154f2c12e16b907de2487fa8f93bac9a" Selector="&lt;html app='chrome.exe' title='*VIS*' /&gt;&lt;webctrl name='txtToDate' tag='INPUT' /&gt;" TimeoutMS="[in_Timeout]" WaitForReady="COMPLETE" />
       </ui:TypeInto.Target>
     </ui:TypeInto>
-    <ui:LogMessage DisplayName="Log Message: GL To date" sap:VirtualizedContainerService.HintSize="714,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="Info" Message="[&quot;GL To Date: &quot;+glToDate+&quot; entered&quot;]" />
-    <If sap2010:Annotation.AnnotationText="If in_ItemDetailsFlag = TRUE then it checks Invoice Details(Items) checkbox else if in_ItemDetailsFlag = FALSE then it does not checks Invoice Details(Items) checkbox" Condition="[in_ItemDetailsFlag]" DisplayName="If: Item details flag is True" sap:VirtualizedContainerService.HintSize="714,315.333333333333" sap2010:WorkflowViewState.IdRef="If_2">
+    <ui:LogMessage DisplayName="Log Message: GL To date" sap:VirtualizedContainerService.HintSize="334,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="Info" Message="[&quot;GL To Date: &quot;+glToDate+&quot; entered&quot;]" />
+    <If sap2010:Annotation.AnnotationText="If in_ItemDetailsFlag = TRUE then it checks Invoice Details(Items) checkbox else if in_ItemDetailsFlag = FALSE then it does not checks Invoice Details(Items) checkbox" Condition="[in_ItemDetailsFlag]" DisplayName="If: Item details flag is True" sap:VirtualizedContainerService.HintSize="334,181.333333333333" sap2010:WorkflowViewState.IdRef="If_2">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
-          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
           <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
@@ -158,7 +159,7 @@
         <ui:Comment DisplayName="Comment: Invoice details checkbox is not selected" sap:VirtualizedContainerService.HintSize="334,55.3333333333333" sap2010:WorkflowViewState.IdRef="Comment_1" Text="// Invoice details checkbox is not selected" />
       </If.Else>
     </If>
-    <ui:Click AlterIfDisabled="{x:Null}" SendWindowMessages="{x:Null}" ClickType="CLICK_SINGLE" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Click: Export to excel checkbox" sap:VirtualizedContainerService.HintSize="714,106" sap2010:WorkflowViewState.IdRef="Click_3" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
+    <ui:Click AlterIfDisabled="{x:Null}" SendWindowMessages="{x:Null}" ClickType="CLICK_SINGLE" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Click: Export to excel checkbox" sap:VirtualizedContainerService.HintSize="334,106" sap2010:WorkflowViewState.IdRef="Click_3" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
       <ui:Click.CursorPosition>
         <ui:CursorPosition Position="Center">
           <ui:CursorPosition.OffsetX>
@@ -173,8 +174,8 @@
         <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="f9dc3f0c-baa2-4412-83e5-2b4feb9f55c0" InformativeScreenshot="3165402f362ea3054b4375dd950f6300" Selector="&lt;html app='chrome.exe' title='*VIS*' /&gt;&lt;webctrl tag='INPUT' type='checkbox' name='chkExport' /&gt;" TimeoutMS="[in_Timeout]" WaitForReady="COMPLETE" />
       </ui:Click.Target>
     </ui:Click>
-    <ui:LogMessage DisplayName="Log Message: Clicked on Export to Excel checkbox" sap:VirtualizedContainerService.HintSize="714,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="Info" Message="[&quot;Clicked on Export to excel checkbox&quot;]" />
-    <ui:Click AlterIfDisabled="{x:Null}" SendWindowMessages="{x:Null}" ClickType="CLICK_SINGLE" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Click: Submit button" sap:VirtualizedContainerService.HintSize="714,106" sap2010:WorkflowViewState.IdRef="Click_4" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
+    <ui:LogMessage DisplayName="Log Message: Clicked on Export to Excel checkbox" sap:VirtualizedContainerService.HintSize="334,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="Info" Message="[&quot;Clicked on Export to excel checkbox&quot;]" />
+    <ui:Click AlterIfDisabled="{x:Null}" SendWindowMessages="{x:Null}" ClickType="CLICK_SINGLE" DelayBefore="[in_DelayBefore]" DelayMS="[in_DelayAfter]" DisplayName="Click: Submit button" sap:VirtualizedContainerService.HintSize="334,106" sap2010:WorkflowViewState.IdRef="Click_4" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
       <ui:Click.CursorPosition>
         <ui:CursorPosition Position="Center">
           <ui:CursorPosition.OffsetX>
@@ -189,9 +190,9 @@
         <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="2654853b-5a0f-4260-b22d-fab907a17412" InformativeScreenshot="605c847314010e1e15e8c3c26e53df73" Selector="&lt;html app='chrome.exe' title='*VIS*' /&gt;&lt;webctrl tag='INPUT' aaname='*Submit*' /&gt;" TimeoutMS="[in_Timeout]" WaitForReady="COMPLETE" />
       </ui:Click.Target>
     </ui:Click>
-    <ui:LogMessage DisplayName="Log Message: Clicked on submit button" sap:VirtualizedContainerService.HintSize="714,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_6" Level="Info" Message="[&quot;Clicked on Submit button&quot;]" />
-    <ui:LogMessage DisplayName="Log Message: Enter details on TSI flow - Ended" sap:VirtualizedContainerService.HintSize="714,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_8" Level="Info" Message="[&quot;Enter details on TSI portal to download file flow - Ended&quot;]" />
-    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="This .xaml file stores flat file on shared folder" DisplayName="Invoke StoreFileOnSharedDrive workflow" sap:VirtualizedContainerService.HintSize="714,144.666666666667" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="TSIPortal\StoreFileOnSharedDrive.xaml">
+    <ui:LogMessage DisplayName="Log Message: Clicked on submit button" sap:VirtualizedContainerService.HintSize="334,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_6" Level="Info" Message="[&quot;Clicked on Submit button&quot;]" />
+    <ui:LogMessage DisplayName="Log Message: Enter details on TSI flow - Ended" sap:VirtualizedContainerService.HintSize="334,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_8" Level="Info" Message="[&quot;Enter details on TSI portal to download file flow - Ended&quot;]" />
+    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="This .xaml file stores flat file on shared folder" DisplayName="Invoke StoreFileOnSharedDrive workflow" sap:VirtualizedContainerService.HintSize="334,144.666666666667" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="TSIPortal\StoreFileOnSharedDrive.xaml">
       <ui:InvokeWorkflowFile.Arguments>
         <InArgument x:TypeArguments="x:String" x:Key="in_SourceFolderPath">[in_Config("DirectoryPath").ToString+Environment.UserName+in_Config("DowonloadFilePath").ToString]</InArgument>
         <InArgument x:TypeArguments="x:String" x:Key="in_ExceptionMessage" />
